# exam-calendar

./: .env.example  .gitignore  Cargo.toml
data/calendars/: shanghai-gaokao.json
public/calendars/: shanghai-gaokao.ics
src/: lib.rs  main.rs  server.rs  store.rs
